--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       - name: devcard
         uses: dailydotdev/action-devcard@2.0.4
         with:
-          devcard_id: ${{ secrets.DEVCARD_ID }}
+          devcard_id: ${{ a3535b97e38a40e7ae2eb3480e0fb1ca }}
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
