--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,16 +5,16 @@ name: DevCard
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-
+  push:
+    branches: [ main ]
+  schedule:
+    - cron: "0 0 * * *"
   pull_request:
     branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-  push:
-    branches: [ main ]
-  schedule:
-    - cron: "0 0 * * *"
+  
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -24,7 +24,7 @@ jobs:
       - name: devcard
         uses: dailydotdev/action-devcard@2.0.4
         with:
-          devcard_id: ${{ a3535b97e38a40e7ae2eb3480e0fb1ca }}
+          devcard_id: ${{ secrets.DEVCARD_ID }}
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
